# sensez

./: .gitignore  Cargo.toml  DISCLAIMER.md  README.md  action.yml  deny.toml  justfile  mkdocs.yml  pyproject.toml  sensez.toml  versions.json
.github/workflows/: ci.yml  docs.yml  release.yml  vscode-release.yml
0.1.11/: generate.py
0.1.11/contributing/docs/: index.html
0.1.11/usage/github-action/: index.html
0.1.12/reference/configuration/: index.html
0.2.0/: index.html
0.2.0/search/: search_index.json
0.2.1/: verify_examples.py  verify_examples_with_strictness.py
0.2.1/getting-started/: index.html
0.2.1/local-metrics/: index.html
0.2.1/usage/mcp-and-agents/: index.html
0.2.2/: finding_groups.py  finding_types.py  rust_metadata.py
0.2.2/reference/findings/: index.html
action/: README.md  action.yml  pyproject.toml
action/sensez_action/: __init__.py  __main__.py  annotations.py  comments.py  config.py  context.py  diff.py  findings.py  github.py  runner.py  summary.py
action/tests/: __init__.py  test_annotations.py  test_comments.py  test_diff.py  test_findings.py
baseline-comparisons/: README.md  bench.sh  package-lock.json  package.json  pyproject.toml  report.py  targets.sh
baseline-comparisons/bench/: __init__.py  compare.py  loading.py  model.py  render.py  solutions.py
benchmarks/: baselines.json  run.sh  targets.sh
dev/: 404.html  finding_groups.py  finding_types.py  index.html  rust_metadata.py  tuning.py
dev/contributing/docs/: index.html
dev/getting-started/: index.html
dev/local-metrics/: index.html
dev/reference/cli/: index.html
dev/reference/configuration/: index.html
dev/reference/findings/: index.html
dev/search/: search_index.json
dev/usage/github-action/: index.html
dev/usage/mcp-and-agents/: index.html
docs/: generate.py  getting-started.md  index.md  local-metrics.md  rust_metadata.py  tuning.py  verify_examples.py
docs/contributing/: docs.md
docs/examples/: eslint.config.mjs  package-lock.json  package.json  ruff.toml  sensez.toml
docs/examples/boundaries/: fixed.py  fixed.ts
docs/examples/cycles/: example_a.py  example_a.ts  example_b.py  example_b.ts  fixed.py  fixed.ts
docs/examples/dead_code/: caller.ts  example.py  example.ts  fixed.py  fixed.ts
docs/examples/duplication/: example_a.py  example_a.ts  example_b.py  example_b.ts  fixed.py  fixed.ts
docs/javascripts/: findings-tabs.js
docs/reference/: cli.md  configuration.md  findings.md
docs/stylesheets/: brand.css
docs/usage/: github-action.md  mcp-and-agents.md
editors/vscode/: .vscodeignore  esbuild.mjs  package-lock.json  package.json  tsconfig.json
editors/vscode/scripts/: prepare-binary.mjs
editors/vscode/src/: binary.ts  extension.ts  health.ts  settings.ts
evals/: .gitignore  README.md  poc_deepseek_v4_run.sh  poc_multi_task.sh  run_all_synthetic.sh
evals/common/: prepare_repo.py  quality_score.py  report.py  run_ab.py  scan_metrics.py  seed_codex_home.py  seed_opencode_home.py  summarize.py  workspace.py
evals/prompts/: control.md  sensez.md
evals/swe_polybench_ab/: README.md  export_predictions.py  tasks.jsonl  tasks_batch2.jsonl  tasks_batch3.jsonl  tasks_django.jsonl  tasks_expanded.jsonl  tasks_swebench.jsonl
evals/synthetic/: README.md  tasks.jsonl  tasks_sensez_exclusive.jsonl  tasks_smells.jsonl
evals/tinyforms_ab/: README.md  prepare_repo.py  tasks.jsonl
npm/: package.json
npm/platform/sensez-darwin-arm64/: package.json
npm/platform/sensez-darwin-x64/: package.json
npm/platform/sensez-linux-arm64-gnu/: package.json
npm/platform/sensez-linux-x64-gnu/: package.json
npm/platform/sensez-win32-x64-msvc/: package.json
regression/: .gitignore  README.md  __init__.py  analyze.py  brainz_regressions.py  mcp_client.py  normalize.py  run.py  run.sh  targets.toml
regression/baselines/flask/: brainz.after-branch-switch.json  brainz.after-full.json  brainz.after-gate-fix.json  brainz.after-reintro.json  brainz.branch-colleague-main.json  brainz.branch-detached-scan.json  brainz.branch-return-feature-fixed.json  brainz.branch-same-branch-revert.json  default.noze.json  default.noze.max5.json  diff.noze.json  full.noze.json  full.noze.max5.json  full.noze.threshold40.json  gate.block.json  gate.shared-worktree.session-b.json  mcp.full.noze.json  mcp.limited.noze.json  mcp.tools.json  metrics-files.schema.json
regression/baselines/zod/: brainz.after-branch-switch.json  brainz.after-full.json  brainz.after-gate-fix.json  brainz.after-reintro.json  brainz.branch-colleague-main.json  default.noze.json  (+15 more)
scripts/: setup-mcp.sh
skills/sensez/: SKILL.md
src/: cli.rs  config.rs  config_summary.rs  docs.rs  dotdir.rs  fingerprints.rs  globs.rs  lib.rs  main.rs  output_filter.rs  pipeline.rs  report.rs
src/bonez/: mod.rs
src/brainz/: aging.rs  events.rs  file_lock.rs  fingerprint.rs  flush.rs  gate_memory.rs  hub.rs  mod.rs  ranking.rs  recapture.rs  recording.rs  report.rs  resolve.rs  staleness.rs  store.rs  store_tests.rs  suppression.rs  triage.rs  usage.rs
src/cli/: brainz.rs  output.rs  spec.rs  tests.rs
src/config/: brainz.rs  model.rs  source.rs  tests.rs
src/config_summary/: tests.rs
src/diff/: filter.rs  filter_tests.rs  git.rs  mod.rs  parse.rs
src/eyez/: cache.rs  docs.rs  embed.rs  extract.rs  mod.rs  search.rs  semantic_cache.rs
src/lsp/: diagnostics.rs  health.rs  mod.rs  protocol.rs  server.rs  settings.rs  workspace.rs
src/mcp/: agent_scope.rs  compact.rs  gate.rs  gate_regression_tests.rs  gate_tests.rs  handlers.rs  mod.rs  prompts.rs  protocol.rs  repeats.rs  repeats_tests.rs  scan.rs  scan_recording.rs  server.rs  tools.rs
src/noze/: cycles.rs  glossary.rs  mod.rs
src/profiles/: comments.rs  conditionals.rs  lexeme.rs  mod.rs  pathroot.rs  profile_macro.rs  registry.rs  typevocab.rs  walk.rs
src/report/: smell_kind.rs
src/reporter/: filter.rs  json.rs  mod.rs  terminal.rs  terminal_tests.rs
src/setup/: agents.rs  artifacts.rs  gate.rs  mod.rs  prompts.rs  skills.rs  tests.rs
src/spine/: mod.rs
tests/: fixture_expectations.rs  public_api.rs
(+299 files in other folders)
