[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[project]
name = "sensez"
version = "0.1.2"
description = "Sensez CLI and MCP server for structural maintainability checks"
requires-python = ">=3.9"
readme = "README.md"
keywords = ["architecture", "dead-code", "duplication", "code-quality"]
classifiers = [
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.maturin]
bindings = "bin"
no-default-features = true
features = ["mcp", "lang-python"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
]

[tool.uv.workspace]
members = [
    "baseline-comparisons",
]
